Primer bosquejo de la arquitectura planteada.
Se agrega:
- Clase map con la matriz de bloques, a futuro hay que cambiar el struct por la clase bloque.
- Gamemanager que lleva el control del estado actual del juego
- Una clase inputhandler encargada de procesar la entrada para asi bifurcarla a los modulos necesarios.
- Una clase camera para control de la camara. Se implemento un primer bosquejo del control de la camara con el mouse.
- GameManager y Camera son singleton. A futuro aplicar este patron a inputhandler.

--- a/Obligatorio_1.vcxproj
+++ b/Obligatorio_1.vcxproj
@@ -141,11 +141,21 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="GameManager.cpp" />
+    <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Map.cpp" />
     <ClCompile Include="OpenGLUtil.cpp" />
+    <ClCompile Include="Player.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
+    <ClInclude Include="GameManager.h" />
+    <ClInclude Include="InputHandler.h" />
+    <ClInclude Include="Map.h" />
     <ClInclude Include="OpenGLUtil.h" />
+    <ClInclude Include="Player.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
