Se separa el renderizado del mapa y de los personajes. Se dibuja el personaje. Movimiento del personaje sin respetar reglas del mapa, altura por ejemplo. Se dibuja las líneas de los bloques y del personaje, para el mapa en modo "wireframe" bastaría con deshabilitar el llenado de los cubos (Primer dibujo)

--- a/Obligatorio_1.vcxproj
+++ b/Obligatorio_1.vcxproj
@@ -148,6 +148,7 @@
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="OpenGLUtil.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
@@ -156,6 +157,7 @@
     <ClInclude Include="Map.h" />
     <ClInclude Include="OpenGLUtil.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
