Proceso de enemigo.

--- a/Obligatorio_1.vcxproj
+++ b/Obligatorio_1.vcxproj
@@ -142,23 +142,28 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="GameManager.cpp" />
     <ClCompile Include="InputHandler.cpp" />
     <ClCompile Include="LTimer.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="OpenGLUtil.cpp" />
+    <ClCompile Include="Ficha.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Settings.cpp" />
     <ClCompile Include="Vector3.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Direction.h" />
+    <ClInclude Include="Enemy.h" />
     <ClInclude Include="GameManager.h" />
     <ClInclude Include="InputHandler.h" />
     <ClInclude Include="LTimer.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="OpenGLUtil.h" />
+    <ClInclude Include="Ficha.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Settings.h" />
     <ClInclude Include="Vector3.h" />
